# nexus

./: .dockerignore  Dockerfile  README.md  pyproject.toml
src/nexus/: app.py  main.py
src/nexus/api/v1/: __init__.py  chat.py  realtime.py  realtime.py.bak  routes_transcriptions.py  transcribe.py  tts.py
src/nexus/application/: container.py
src/nexus/application/realtime/: service.py  text_processing.py
src/nexus/application/tts/: use_case.py
src/nexus/clients/grpc/: channel.py  stubs.py
src/nexus/commands/: app.py
src/nexus/configs/: config.py
src/nexus/core/: logging.py  middleware.py  security.py
src/nexus/domain/realtime/: session_state.py
src/nexus/inferencers/asr/: inferencer.py
src/nexus/inferencers/chat/: __init__.py  inferencer.py
src/nexus/inferencers/tts/: __init__.py  inferencer.py  text_normalizer.py
src/nexus/infrastructure/audio/: __init__.py  resampler.py
src/nexus/infrastructure/tts/: __init__.py  backend.py  factory.py  grpc_backend.py  inferencer.py  resampler.py
src/nexus/mcp/: __init__.py  client.py  models.py  registry.py
src/nexus/models/: __init__.py  transcribe.py
src/nexus/protos/asr/: ux_speech_pb2.py  ux_speech_pb2.pyi  ux_speech_pb2_grpc.py  ux_speech_pb2_grpc.pyi
src/nexus/protos/tts/: tts.proto  tts_pb2.py  tts_pb2.pyi  tts_pb2_grpc.py  tts_pb2_grpc.pyi
src/nexus/servicers/: transcribe.py
src/nexus/services/: transcriptions_service.py
src/nexus/sessions/: __init__.py  chat_session.py  realtime_session.py
tests/: test_http2.py
tests/demo_tts/: demo01.py
tests/e2e/openai/: test_ws.py
tests/test_openai/: demo_chat.py  demo_chat_stream.py  demo_tools_call.py  demo_tts.py  test01.py  test_stream.py  test_ws.py
tests/unit/: test_realtime_audio_input_config.py  test_realtime_audio_response_context.py  test_realtime_text_processing.py  test_realtime_transcription_metadata_config.py  test_realtime_transcription_worker_resampling.py  test_streaming_resampler.py  test_transcription_stream_tracker.py  test_tts_backend_config.py  test_tts_http_api.py  test_tts_segmenter.py
(+14 files in other folders)
